force-app/main/default/objects/GoogleMapsApiConfig__c/GoogleMapsApiConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Google maps api config</description>
    <label>GoogleMapsApiConfig</label>
</CustomObject>