force-app/main/default/objects/GoogleMapsApiConfig__c/fields/API_Key_DCBS__c.field-meta.xml
<CustomField>
    <fullName>API_Key_DCBS__c</fullName>
    <description>API key used for DCBS office</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API key used for DCBS office</inlineHelpText>
    <label>API Key DCBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>