force-app/main/default/objects/GoogleMapsApiConfig__c/fields/AutoCompleteUrl__c.field-meta.xml
<CustomField>
    <fullName>AutoCompleteUrl__c</fullName>
    <description>Api endpoint for auto complete url</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api endpoint for auto complete url</inlineHelpText>
    <label>Auto Complete Url</label>
    <type>Url</type>
</CustomField>