force-app/main/default/objects/GoogleMapsApiConfig__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Google api authentication key</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Google api authentication key</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>