force-app/main/default/objects/GoogleMapsApiConfig__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location cordinates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated, location coordinates</inlineHelpText>
    <label>Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>