force-app/main/default/objects/GoogleMapsApiConfig__c/fields/PlaceDetailUrl__c.field-meta.xml
<CustomField>
    <fullName>PlaceDetailUrl__c</fullName>
    <description>Api endpoint for place detail</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api endpoint for place detail</inlineHelpText>
    <label>Place Detail Url</label>
    <type>Url</type>
</CustomField>